--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="large_text">
     </string>
     <string name="title_activity_maps">Map</string>
+    <string name="title_activity_profile">ProfileActivity</string>
 </resources>
